--- a/includes/header.html
+++ b/includes/header.html
@@ -2,7 +2,7 @@
     <div class="container">
 
         <!-- Brand -->
-        <a class="navbar-brand" href="index.html"><i class="fas fa-floppy-disk fa-fw"></i> Charadex</a>
+        <a class="navbar-brand" href="index.html"><i class="fas fa-bug fa-fw"></i> Graf-Palaka</a>
 
         <!-- Toggle -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#charadexnav">
@@ -18,21 +18,21 @@
                 
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-toggle="dropdown"> Explore <i class="fas fa-chevron-down nav-link-icon fa-fw"></i></a> 
+                    <a class="nav-link" href="https://toyhou.se/~world/148833.graf-palaka/bulletins" data-toggle="dropdown" target="_blank"> Explore Graf-Palaka <i class="fas fa-chevron-down nav-link-icon fa-fw"></i></a> 
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="world.html">About World</a>
-                        <a class="dropdown-item" href="species.html">About Species</a>
+                        <a class="dropdown-item" href="https://toyhou.se/~world/148833.graf-palaka/page/104703.the-archive" target="_blank">About Graf-Palaka</a>
+                         <div class="dropdown-divider"></div>
+                         <a class="dropdown-item" href="traits.html">Species Traits</a>
+                            <a class="dropdown-item" href="masterlist.html">Species Masterlist</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Toyhou.se World</a>
-                        <a class="dropdown-item" href="#">Discord Server</a>
+                     <a class="dropdown-item" href="bestiary.html">Bestiary</a>
+                        <a class="dropdown-item" href="dex.html">Mantao Masterlist</a>
                     </div>
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-toggle="dropdown">Catalogue <i class="fas fa-chevron-down nav-link-icon fa-fw"></i></a>
+                    <a class="nav-link" href="#" data-toggle="dropdown">Catalogues<i class="fas fa-chevron-down nav-link-icon fa-fw"></i></a>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="masterlist.html">Species Masterlist</a>
-                        <a class="dropdown-item" href="traits.html">Species Traits</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="items.html">Item Catalogue</a>
                         <a class="dropdown-item" href="prompts.html">Prompt Archive</a>
@@ -42,13 +42,15 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-toggle="dropdown">Help <i class="fas fa-chevron-down nav-link-icon fa-fw"></i></a>
+                    <a class="nav-link" href="#" data-toggle="dropdown">Help & Resources <i class="fas fa-chevron-down nav-link-icon fa-fw"></i></a>
                     <div class="dropdown-menu dropdown-menu-right">
+                                  <a class="dropdown-item" href="https://toyhou.se/~world/148833.graf-palaka" target="_blank">Toyhou.se World</a>
+                        <a class="dropdown-item" href="https://discord.gg/cbPUnxrEPD" target="_blank">Discord Server</a>
+                          <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="staff.html">Staff</a>
                         <a class="dropdown-item" href="terms.html">TOS</a>
                         <a class="dropdown-item" href="faq.html">FAQ</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="">Help Desk</a>
+                 
                     </div>
                 </li>
 
