--- a/styles/charadex.css
+++ b/styles/charadex.css
@@ -38,7 +38,7 @@ body {
   /* Text
   ================================================================ */
   --cd-body-text-color:                  #303030;
-  --cd-faded-text-color:                 #575757;
+  --cd-faded-text-color:                 #48433c;
 
   /* ============================================================= */
   /* Borders
@@ -56,7 +56,7 @@ body {
   --cd-navbar-brand-color-hover:         var(--cd-secondary-color);
   --cd-navbar-text-color:               var(--cd-primary-text-color);
   --cd-navbar-link-color:                var(--cd-navbar-text-color);
-  --cd-navbar-link-color-hover:          var(--cd-primary-color);
+  --cd-navbar-link-color-hover:          #b41111;
   --cd-navbar-font-family:               var(--cd-header-font-family);
   
   /* ============================================================= */
@@ -106,7 +106,7 @@ body {
   ================================================================ */
 
    --cd-link-text-color:                  var(--cd-primary-color);
-  --cd-link-text-color-hover:            var(--cd-secondary-color);
+  --cd-link-text-color-hover:            #b41111;
 
 
   /* ============================================================= */
@@ -148,7 +148,7 @@ body {
   --cd-card-header-background-color:     var(--cd-card-background-color);
 
   /* Text */
-  --cd-card-header-font-family:          var(--cd-header-font-family);
+  --cd-card-header-font-family:          #48433c;
 
   /* Border */
   --cd-card-border-width:                var(--cd-border-width);
