--- a/styles/charadex.css
+++ b/styles/charadex.css
@@ -149,6 +149,7 @@ body {
 
   /* Text */
   --cd-card-header-font-family:          #48433c;
+   --cd-card-link-text-color:          #b41111;
 
   /* Border */
   --cd-card-border-width:                var(--cd-border-width);
