--- a/styles/charadex.css
+++ b/styles/charadex.css
@@ -105,8 +105,8 @@ body {
   /* Link
   ================================================================ */
 
-   --cd-link-text-color:                  var(--cd-primary-color);
-  --cd-link-text-color-hover:            #b41111;
+   --cd-link-text-color:                  #b41111;
+  --cd-link-text-color-hover:            #303030;
 
 
   /* ============================================================= */
